--- a/source/_posts/手写字符识别.md
+++ b/source/_posts/手写字符识别.md
@@ -1,5 +1,5 @@
 ---
-1title: 手写字符识别
+title: 手写字符识别
 date: 2020-12-19 21:26:51
 tags: 深度学习
 categories: 深度学习
@@ -10,7 +10,7 @@ mathjax: true
 
 ​		好久没弄过深度学习的东西了，上次写得时候应该是大三上学期，一转眼就是两年了。感觉自己的记忆力好差啊，之前搞得那些已经是忘得一干二净了。这次的任务是采用Omniglot数据集进行手写数字的识别，该数据及包含了50中字母系统中共计1623种字符，每个字符有20个样本，部分样本如下图所示。
 
-![image-20201219215358508](C:\Users\yanglab\AppData\Roaming\Typora\typora-user-images\image-20201219215358508.png)
+![image-20201219215358508.png](https://i.loli.net/2020/12/19/ESTwN5m9IBesoLg.png)
 
 ​		我采用的深度学习框架是pytorch，当用户使用DataLoader加载自定义数据时，需要继承Dataset这个类，并重写其中的两个方法。传入参数为图片路径与标签的字典。采用DataLoader()加载数据，batch_size大小设置为64。
 
@@ -31,7 +31,7 @@ model = nn.Sequential(
 )
 ```
 
-![image-20201219221535989](C:\Users\yanglab\AppData\Roaming\Typora\typora-user-images\image-20201219221535989.png)
+![image-20201219221535989.png](https://i.loli.net/2020/12/19/M9dejr8lyckFviV.png)
 
 定义包含四个卷积层与两个全连接层的CNN网络， 训练50次，测试集上的最高准确率为0.8389，相比于全连接模型，准确率大大提升。
 
@@ -46,4 +46,4 @@ model = nn.Sequential(
         return output
 ```
 
-![image-20201219221339503](C:\Users\yanglab\AppData\Roaming\Typora\typora-user-images\image-20201219221339503.png)
+![image-20201219221339503.png](https://i.loli.net/2020/12/19/CGVWcfxUHilDn4Q.png)
