--- a/source/_posts/乘法逆元.md
+++ b/source/_posts/乘法逆元.md
@@ -55,9 +55,9 @@ ll qpow(long long a, long long b) {
     ll ret = 1;
     while (b) {
         if (b & 1) {
-            ret = (ret * b) % mod;
+            ret = (ret * a) % mod;
         }
-        k >>= 1;
+        b >>= 1;
         a = (a * a) % mod;
     }
     return ret;
