--- a/source/_posts/数据库.md
+++ b/source/_posts/数据库.md
@@ -1,5 +1,11 @@
 ---
 title: 数据库
 date: 2021-02-02 17:39:39
-tags:
+tags: 数据库
+Categories: mysql
+mathjax: true
 ---
+
+### 一片介绍rank() dense_rank()很好的文章
+
+https://blog.csdn.net/u011726005/article/details/94592866
